# whiteballoon

./: .env.example  .gitignore  AI_PROJECT_GUIDE.md  CLAUDE.md  CLI_IMPLEMENTATION_CHECKLIST.md  CLI_IMPLEMENTATION_PLAN.md  CLI_SYNC_PLAN.md  DEV_CHEATSHEET.md  FEATURE_DEVELOPMENT_PROCESS.md  README.md  README_PROMPT.md  actionable_tasks.md  balloon  brainstorm.txt  pyproject.toml  request_ideas.txt  requirements.txt  test_openwebui.py  todo.txt  wb  wb.bat  wb.py
app/: __init__.py  captions.py  config.py  db.py  dependencies.py  env.py  main.py  models.py  scheduler.py  schema_utils.py  url_utils.py
app/dedalus/: __init__.py  log_store.py  logging.py  redaction.py
app/hub/: __init__.py  admin.py  app.py  config.py  pending.py  routes.py  security.py  storage.py
app/modules/: __init__.py
app/realtime/: __init__.py  jobs.py  storage.py
app/routes/: __init__.py  admin_jobs_api.py  auth.py  captions.py  chat_ai_api.py  comment_insights_api.py  comment_promotion_api.py  rss.py  ui.py
app/security/: csrf.py
docs/: comment_request_indexing.md  dedalus_labs_coding_guide.md  inline_html_locations.txt  intent_capture.md  modular_spec_process.md  modular_spec_prompt.md  mutual_aid_copilot_proposal.md  spec.md  theme_ideas.md
scripts/: README.md  delete_requests_by_title.py  no-pytest.sh  run_comment_request_pipeline.py  test_openwebui_api.py
templates/: base.html
tools/: __init__.py  dedalus_cli_verification.py  dedalus_log_maintenance.py  dev.py  generate_requirements.py  hub.py  peer_auth.py  skins_build.py  update_env_defaults.py  wb_bootstrap.py
(+778 files in other folders)
