[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whiteballoon"
version = "0.1.0"
description = "Modular FastAPI app with authentication and request feed"
authors = [{ name = "WhiteBalloon" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "sqlmodel>=0.0.16,<0.0.17",
    "uvicorn[standard]>=0.30,<0.31",
    "jinja2>=3.1,<3.2",
    "passlib[bcrypt]>=1.7,<1.8",
    "python-multipart>=0.0.9,<0.0.10",
    "httpx>=0.27,<0.28",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "typer>=0.12,<0.13",
]

[project.optional-dependencies]
dev = ["ruff>=0.5,<0.6", "mypy>=1.10,<2.0"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["app", "tests", "tools"]
